--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ click==8.1.7
 colorama==0.4.6
 cors==1.0.1
 Django
-django-cors-headers==4.2.0
+django-cors-headers
 filelock==3.12.3
 Flask==2.3.3
 future==0.18.3
