--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-﻿asgiref==3.7.2
-blinker==1.6.2
-certifi==2023.7.22
+﻿asgiref
+blinker
+certifi
 cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
+charset-normalizer
+click
+colorama
 cors==1.0.1
 Django
 django-cors-headers
-filelock==3.12.3
-Flask==2.3.3
-future==0.18.3
-gevent==23.9.0.post1
-greenlet==2.0.2
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-Pillow==10.0.0
-pycparser==2.21
-PySocks==1.7.1
-requests==2.31.0
-requests-file==1.5.1
-six==1.16.0
-sqlparse==0.4.4
-tldextract==3.5.0
-tzdata==2023.3
-urllib3==2.0.4
-Werkzeug==2.3.7
-zope.event==5.0
-zope.interface==6.0
+filelock
+Flask
+future
+gevent
+greenlet
+idna
+itsdangerous
+Jinja2
+MarkupSafe
+Pillow
+pycparser
+PySocks
+requests
+requests-file
+six
+sqlparse
+tldextract
+tzdata
+urllib3
+Werkzeug
+zope.event
+zope.interface
